<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/blacktop"
    tools:context=".StartScreen">

    <TextView
        android:id="@+id/text_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="128dp"
        android:fontFamily="@font/permanent_marker"
        android:gravity="center_horizontal"
        android:lineSpacingExtra="7sp"
        android:text="@string/welcome_text"
        android:textColor="#ffffff"
        android:textSize="35sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/squadz"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/squadz"
        android:layout_width="345dp"
        android:layout_height="124dp"
        android:contentDescription="@string/desc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.052"
        app:srcCompat="@drawable/logo" />

    <Button
        android:id="@+id/get_started_button"
        android:layout_width="214dp"
        android:layout_height="62dp"
        android:layout_marginBottom="68dp"
        android:backgroundTint="#FFFFFF"
        android:fontFamily="@font/permanent_marker"
        android:letterSpacing="0.05"
        android:lineSpacingExtra="8sp"
        android:text="@string/get_started"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="normal"
        app:cornerRadius="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_id"
        app:layout_constraintVertical_bias="0.968" />

    <TextView
        android:id="@+id/haveAnAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/segoe_ui"
        android:letterSpacing="0.05"
        android:lineSpacingExtra="3.3sp"
        android:text="@string/account_quest"
        android:textColor="#ffffff"
        android:textSize="15sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.924" />

</androidx.constraintlayout.widget.ConstraintLayout>